# salti

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: check.yaml  release.yaml
libmsa/: Cargo.toml  README.md
libmsa/src/: alignment_type.rs  data.rs  detection.rs  error.rs  filter.rs  lib.rs  metrics.rs  model.rs  projection.rs  translation.rs
salti/: Cargo.toml
salti/src/: app.rs  cli.rs  command.rs  logging.rs  main.rs  update.rs
salti/src/config/: keybindings.rs  theme.rs
salti/src/core/: command.rs  data.rs  mod.rs  model.rs  parser.rs  search.rs  stats_cache.rs  viewport.rs  visibility.rs
salti/src/input/: key.rs  mod.rs  mouse.rs  route.rs
salti/src/overlay/: minimap.rs  mod.rs  overlay_state.rs  render.rs
salti/src/overlay/command_palette/: command_definitions.rs  command_error.rs  command_runners.rs  command_spec.rs  completers.rs  input.rs  mod.rs  ui.rs  utils.rs
salti/src/ui/: alignment_pane.rs  consensus_pane.rs  frame.rs  layout.rs  mod.rs  notification.rs  render.rs  rows.rs  selection.rs  sequence_id_pane.rs  ui_state.rs  utils.rs
src/: app.rs  cli.rs  layout.rs  lib.rs  logging.rs  main.rs  parser.rs  state.rs  viewport.rs
src/components/: alignment.rs  consensus.rs  help.rs  jump.rs  mod.rs  sequence_id.rs  ui.rs
src/config/: keybindings.rs  mod.rs  options.rs  schemes.rs  theme.rs
src/core/: app_state.rs  column_stats.rs  command.rs  consensus.rs  core_state.rs  data.rs  jobs.rs  lookups.rs  mod.rs  parser.rs  viewport.rs  visibility.rs
src/overlay/: minimap.rs  mod.rs  notification.rs  render.rs
src/overlay/command_palette/: command_definitions.rs  command_runners.rs  completers.rs  input.rs  ui.rs
src/ui/: alignment_pane.rs  consensus_pane.rs  frame.rs  layout.rs  mod.rs  render.rs  rows.rs  selection.rs  sequence_id_pane.rs  state.rs  ui_state.rs  utils.rs
tapes/: aant.tape  command_palette.tape  minimap.tape  mouse.tape  theme.tape  translation.tape  viz.tape
