[package]
name = "salti"
version = "0.1.0"
edition = "2024"


[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
tokio-stream = "0.1.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"
needletail = "0.6.3"
clap = { version = "4.5.57", features = ["derive"] }
nucleo-matcher = "0.3.1"
rand = "0.10.0"
regex = "1.12.3"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
insta = "1.46.3"
tempfile = "3.25.0"

[profile.release]
debug = true
