[package]
name = "salti"
version = "0.7.1"
edition = "2024"
authors = ["Samuel Sims"]
description = "A modern, fast, multiple sequence alignment browser - built for the terminal. "
readme = "../README.md"
repository = "https://github.com/Sam-Sims/salti"
license = "MIT"
keywords = ["bioinformatics", "MSA", "TUI", "ratatui"]
categories = ["command-line-utilities", "science"]

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
tokio-stream = "0.1.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"
paraseq = { version = "0.4.8", features = ["url", "ssh"] }
libmsa = { path = "../libmsa" }
clap = { version = "4.5.57", features = ["derive"] }
nucleo-matcher = "0.3.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
human-panic = "2"

[dev-dependencies]
insta = "1.46.3"
tempfile = "3.25.0"
